--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@prisma/client": "^5.17.0",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
+    "date-fns": "^3.6.0",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-spinners": "^0.14.1",
     "swr": "^2.2.5",
     "zustand": "^4.5.4"
   },
